# VQA_Launcher

./: CMakeLists.txt  Launcher.py  Luncher.py  VQA.cpp  VQA_V1.cpp  VQA_V2.cpp  VQA_V3.cpp  config.json  main.cpp
OLD/: VQA_Multi.cpp
OLD/Remote_K2/: Clock.ino
